--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -75,7 +76,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.12",
+    "@types/leaflet": "^1.9.20",
     "rimraf": "^6.0.1"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": ">=10"
   }
 }
